@@ -80,6 +80,8 @@ sub new {
 }
 
 
+=back
+
 =head2 General Methods
 
 =over 4
