@@ -1,3 +1,11 @@
+2000-02-23  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Fix POD errors using podchecker
+	
+	* Print.pm: Correct pod errors
+
+	* TempFile.pm: Correct pod error
+
 2000-02-22  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/Michelle.pm: Add flag_from_bits
